fix: better render on mobile

--- a/themes/default.scss
+++ b/themes/default.scss
@@ -34,7 +34,7 @@ body {
       transform 0.25s cubic-bezier(0.08, 0.59, 0.29, 0.99) 0s,
       background-color 0.25s cubic-bezier(0.08, 0.59, 0.29, 0.99) 0s;
     max-width: 680px;
-    min-width: 340px;
+    min-width: 310px;
     width: 100%;
     height: auto;
     font-size: 1.5rem;
